# LeagueOfChance

./: .gitignore  Constants.py  Test.py  main.py  pyproject.toml  requirements.txt  trends.csv
Cogs/: Backstory.py  Bot.py  Constants.py  Graphs.py  MachineLearning.py  News.py  RandomCommands.py  RemoteData.py  SummonerInfo.py  Teams.py  Tips.py  Yordle.py  YordleWords.py
