[tool.poetry]
name = "LeagueOfChance"
version = "1.0.0"
description = "Generates random league of legends builds"
authors = ["Stijn Kamp"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
